# fifa_fan_assistant

./: .gitignore  README.md
backend/: .coverage  .coveragerc  .env.example  .vercelignore  pyproject.toml  requirements-dev.txt  requirements-firestore.txt  requirements.txt  ruff.toml
backend/api/: index.py
backend/app/: main.py  models.py
backend/app/core/: agent.py  auth.py  cache.py  config.py  firestore.py  httpclient.py  llm.py  matching.py  ratelimit.py  security.py
backend/app/data/: incidents.py  knowledge.py  live.py  ops.py  procedures.py  stadiums.py  sustainability.py
backend/app/routers/: auth.py  chat.py  ops.py  stadium.py  transport.py
backend/scripts/: seed_firestore.py
backend/tests/: test_api.py  test_authz.py  test_cache.py  test_data.py  test_endpoints.py  test_firestore.py  test_llm.py  test_llm_mock.py  test_security.py
docs/: PROPOSAL.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  auth.js  constants.js  styles.css
frontend/src/components/: Bubble.jsx  Incidents.jsx  LiveOps.jsx  Login.jsx  SidePanel.jsx  Sustainability.jsx  Tasks.jsx
frontend/src/hooks/: usePolling.js
